# git-split

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pylintrc  pyproject.toml  pytest.ini
gitsplit/: config.py  git.py  log.py  main.py  split.py
test/gitsplit/: config_test.py  end_to_end_test.py  foods.extract.toml  foods.split.toml
