[tool.poetry]
name = "git-split"
version = "0.0.1"
description = "A history-preserving file splitter for Git."
authors = ["Eric Smith <eric@esmithy.net>"]
license = "MIT"
packages = [
  { include = "gitsplit" },
]

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
isort = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pyfakefs = "^3.7.1"

[tool.poetry.scripts]
"git-split" = "gitsplit.main:main"

[tool.black]
exclude = '''
(
  /(  # Exclude directories:
      \.eggs
    | .+\.egg-info         
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''

[tool.mypy]
# Coming soon?
# https://github.com/python/mypy/issues/5205

[tool.pylint.messages_control]
# Coming soon.
# https://docs.pylint.org/en/latest/whatsnew/2.5.html
disable = """
bad-continuation,attribute-defined-outside-init,W0511,R0902,R0913,W0622,C0116,C0103,
R0903,W0631,W0212,W0603,R1710,R0201
"""
j = '0'

[tool.pytest]
# Coming someday?
# https://github.com/pytest-dev/pytest/issues/1556

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
